--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
   "browser": "complex.js",
   "module": "complex.mjs",
   "types": "typings/complex.d.mts",
+  "keywords": [
+    "complex", "cmath", "trig", "trigonometry",
+    "jsdoc", "tsdoc", "jest", "tsd",
+    "hashcode", "iterator",
+    "esm", "mjs", "mts"
+  ],
   "scripts": {
     "preinstall": "cd scripts && dev-packs",
     "test": "cd scripts && test",
