renamed complex.jest.mjs as complex.test.mjs

--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     }
   },
   "jest": {
-    "testMatch": ["**/tests/**/*.jest.mjs"],
+    "testMatch": ["**/*.{test,spec}.?(c|m)js"],
     "transform": {},
     "collectCoverage": true
   }
